# hw04-group19

./: .buildinfo  LOSC_Event_tutorial.html  Makefile  README.html  README.md  _config.yml  _toc.yml  contribution_statement.html  contribution_statement.md  environment.yml  genindex.html  hw04_description.html  hw04_description.md  intro.html  markdown-notebooks.html  notebooks.html  objects.inv  search.html  searchindex.js  setup.cfg
_build/.doctrees/: LOSC_Event_tutorial.doctree  README.doctree  contribution_statement.doctree  environment.pickle  hw04_description.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
_build/html/: .buildinfo  hw04_description.html  intro.html  markdown.html  search.html  searchindex.js
_build/jupyter_execute/: LOSC_Event_tutorial.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
_sources/: README.md  hw04_description.md  markdown-notebooks.ipynb
data/: GW150914_data.csv
ligotools/: __init__.py  readligo.py
ligotools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ligotools/tests/: test_readligo.py  test_utils.py  tests_readligo.py
