# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
version          = 0.0.1
author           = Ligo Scientific Collaboration (LSC) and group19: Tianyi Chen, Saumya Choudhary, Ashwin Bindra, Minghua Tan
author_email     = vincent-c@berkeley.edu
description      = Provides tools for reading LIGO data files
long_description = file: README.md
long_description_content_type = text/markdown
keywords         = tools, LIGO
license          = BSD 3-Clause License
classifiers      =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.7,
install_requires = 
    numpy==1.23
    h5py==3.7
    matplotlib==3.5
    ipython==8.2
    ipykernel==5.5
    decorator==5.1
    scipy==1.8

[options.packages.find]
exclude =
    examples*
    docs*